# ippl-fork

./: .gitignore  Archive_8h.html  Archive_8h__dep__incl.map  Archive_8h__dep__incl.md5  Archive_8hpp.html  Archive_8hpp__dep__incl.map  Archive_8hpp__dep__incl.md5  BConds_8h.html  BConds_8h__dep__incl.map  BConds_8h__dep__incl.md5  BConds_8hpp.html  BConds_8hpp__dep__incl.map  BConds_8hpp__dep__incl.md5  BareFieldOperations_8hpp.html  BareFieldOperations_8hpp__dep__incl.map  BareFieldOperations_8hpp__dep__incl.md5  BareField_8h.html  BareField_8h__dep__incl.map  BareField_8h__dep__incl.md5  BareField_8hpp.html  BareField_8hpp__dep__incl.map  BareField_8hpp__dep__incl.md5  BcTypes_8h.html  BcTypes_8h__dep__incl.map  BcTypes_8h__dep__incl.md5  BcTypes_8hpp.html  BcTypes_8hpp__dep__incl.map  BcTypes_8hpp__dep__incl.md5  Buffers_8hpp__dep__incl.md5  CIC_8h.html  CIC_8h__dep__incl.map  CIC_8h__dep__incl.md5  CIC_8hpp.html  CIC_8hpp__dep__incl.map  CIC_8hpp__dep__incl.md5  CMakeLists.txt  CartesianCentering_8h.html  CartesianCentering_8h__dep__incl.map  CartesianCentering_8h__dep__incl.md5  CartesianCentering_8hpp.html  (+253 more)
CMakeModules/: FindFINUFFT.cmake
alpine/: AlpineManager.h  CMakeLists.txt  CatalystAdaptor.h  LandauDampingManager.h  LoadBalancer.hpp  PenningTrap.cpp  PenningTrapManager.h
alpine/ExamplesWithoutPicManager/: CMakeLists.txt  IndependentParticlesTest.cpp  ParticleCommunicationTest.cpp  ParticleContainerTest.cpp
search/: all_13.js  all_15.js  all_3.js  all_6.js  all_c.js  all_e.js  all_f.js  files_c.js  functions_6.js  functions_b.js  functions_d.js  typedefs_12.js  variables_13.js  variables_3.js
src/: .gitignore  CMakeLists.txt  IpplCore.h
src/Communicate/: Collectives.hpp  Communicator.h  PointToPoint.hpp  Window.h  Window.hpp
src/Decomposition/: OrthogonalRecursiveBisection.hpp
src/FFT/: CMakeLists.txt  FFT.h  FFT.hpp  NUFFT.h
src/FFT_SRI/: CMakeLists.txt  FFT.h
src/FFT_master/: FFT.h
src/FFT_sri/: FFT.h
src/Field/: BareField.hpp  HaloCells.hpp
src/Octree/: CMakeLists.txt  Octree.h  OctreeAdaptors.h  OctreeContainer.h  OctreeParticle.h
src/OrthoTree/: AidList.h  BoundingBox.h  BoundingBox.hpp  CMakeLists.txt  MortonHelper.h  MortonHelper.hpp  OrthoTree.h  OrthoTree.hpp  OrthoTreeParticle.h  OrthoTreeTypes.h  TreeOpenPoissonSolver.h  Types.h  morton_codes.h  run_unit_tests.sh  visualiser.py
src/OrthoTree/balancing/: algo06.hpp  algo07.hpp  algo09.hpp  algo10.hpp  algo11.hpp
src/OrthoTree/benchmarking/: analyze.py  compare.py  gpt_analysis.py  orthoTreeBenchmark.h  run_test.sh
src/OrthoTree/helpers/: AidList.cpp  AidList.h  AidList.hpp  BoundingBox.h  BoundingBox.hpp  Config.h  Config.h.in  MortonHelper.h  MortonHelper.hpp
src/OrthoTree/paralell_construction/: algo01.hpp  algo02.hpp  algo03.hpp  algo04.hpp  algo05.hpp  algo08.hpp  algo1.hpp  algo2.hpp  algo3.hpp  algo4.hpp  algo5.hpp  algo8.hpp
src/OrthoTree/parallel_construction/: algo01.hpp  algo02.hpp  algo03.hpp  algo04.hpp  algo05.hpp  algo08.hpp
src/OrthoTree/scripts/: build.sh  experiment.sh  readme.md  unit_tests.sh  visualise.py  visualise.sh
src/OrthoTree/scripts/output/: octants0.txt  octants1.txt  octants2.txt  octants3.txt  particles0.txt  particles2.txt
src/OrthoTree_old/: CMakeLists.txt  OrthoTree.h  OrthoTreeParticle.h
src/Particle/: ParticleAttrib.h  ParticleAttrib.hpp  ParticleBase.h  ParticleBase.hpp  ParticleSpatialLayout.h  ParticleSpatialLayout.hpp
src/Stream/InSitu/: CMakeLists.txt  proxy.xml
src/Utility/: IpplTimings.cpp
test/: CMakeLists.txt
test/FFT/: CMakeLists.txt  TestNUFFT.cpp  TestNUFFT1.cpp  TestNUFFT2.cpp
test/FFT_sri/: TestNUFFT2.cpp
test/octree/: CMakeLists.txt  TestOctree.cpp
test/orthotree/: ArgParser.h  CMakeLists.txt  OrthoTreeBenchmarking.cpp  OrthoTreeTest.cpp  TestGaussianTreeSolver.cpp  TestOrthoTree.cpp  TestOrthoTreeSolver.cpp  TestTreeConvergence.cpp  TestTreeScalings.cpp
test/orthotree_old/: CMakeLists.txt  TestOrthoTree.cpp
unit_tests/OrthoTree/: CMakeLists.txt  bounding_box.cpp  complete_region.cpp  linearise.cpp  morton_codes.cpp  ortho_tree.cpp  parallel_ortho_tree.cpp
unit_tests/OrthoTree/helpers/: aid_list.cpp  bounding_box.cpp  morton_codes.cpp
unit_tests/OrthoTree/paralell_construction/: algo2.cpp  algo5.cpp
unit_tests/OrthoTree/parallel_construction/: algo2.cpp  algo5.cpp  algo8.cpp
unit_tests/OrthoTree/parallel_construction/full_test/: 2_ranks.cpp  4_ranks.cpp  8_ranks.cpp  algo1.cpp  test_helper.h
unit_tests/Particle/: GatherScatterTest.cpp
